--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="static/css/bootstrap.css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-
+    <script src="static/js/jquery-3.1.1.min.js"></script>
     <title>index</title>
 </head>
 
@@ -211,6 +211,7 @@
     </div>
 
     <script src="static/js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/js/isotope.min.js"></script>
+    <script src="static/js/isotope.pkgd.js"></script>
+    <script src="static/js/jquery.magnific-popup.min.js"></script>
 </body>
 </html>
