--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="static/css/bootstrap.css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <script src="static/js/jquery-3.1.1.min.js"></script>
     <title>index</title>
 </head>
@@ -18,6 +17,11 @@
 <body>
     <div class="wrapper">
         <header id="header">
+        <div class="floating_menu">
+                <ul>
+                    <li><a onclick="gototop()"><i class="fas fa-arrow-alt-circle-up"></i></a></li>
+                </ul>
+            </div>
             <div class="container">
                 <div class="header-top">
                     <div class="logo">
@@ -25,11 +29,11 @@
                     </div>
                     <nav class="menu">
                         <ul>
-                            <li><a href="#">Menu1</a></li>
-                            <li><a href="#">Menu2</a></li>
-                            <li><a href="#">Menu3</a></li>
-                            <li><a href="#">Menu4</a></li>
-                            <li><a href="#">Menu5</a></li>          
+                            <li><a onclick="fnMove('1')">ABOUT</a></li>
+                            <li><a onclick="fnMove('2')">SERVICES</a></li>
+                            <li><a onclick="fnMove('3')">PORTFOLIO</a></li>
+                            <li><a onclick="fnMove('4')">CONTACT</a></li>
+                            <li><a onclick="fnMove('5')">Menu5</a></li>          
                         </ul>
                     </nav>
                 </div>
@@ -53,7 +57,7 @@
             </div>
         </header>
 
-        <section id="about">
+        <section id="about" class="section-1">
             <div class="container">
                 <div class="content-box">
                     <div class="content-title">
@@ -84,7 +88,7 @@
             </div>
         </section>
 
-        <section id="services">
+        <section id="services" class="section-2">
             <div class="container">
                 <div class="content-box">
                     <div class="content-title">
@@ -131,7 +135,7 @@
             </div>
         </section>
 
-        <section id="portfolio">
+        <section id="portfolio" class="section-3">
             <div class="container">
                 <div class="content-box">
                     <div class="content-title">
@@ -174,7 +178,7 @@
                                 </div>
                             </div>
 
-                            <div class= "portfolio-item web-design" style="position: absolute; left: 0px; top: 330px;">
+                            <div class= "portfolio-item app-design" style="position: absolute; left: 0px; top: 330px;">
                                     <img src="static/imgs/portfolio4.jpg" alt="" >
                                     <h3>THEME DESIGN</h3>
                                     <div class="portfolio-text">
@@ -182,7 +186,7 @@
                                     </div>
                             </div>
 
-                            <div class= "portfolio-item web-design" style="position: absolute; left: 300px; top: 330px;">
+                            <div class= "portfolio-item ul-design" style="position: absolute; left: 300px; top: 330px;">
                                 <img src="static/imgs/portfolio5.jpg" alt="" >
                                 <h3>THEME DESIGN</h3>
                                 <div class="portfolio-text">
@@ -205,6 +209,23 @@
             </div>
         </section>
 
+        <section id="contact" class="section-4">
+            <div class="container">
+                <div class="content-box">
+                    <div class="content-title">
+                        <h2>CONTACT</h2>
+                        <div class="section-icon">
+                            <img src="static/imgs/section-icon.jpg" alt="section-icon">
+                        </div> 
+                    </div>
+                    <div class="content">
+                        <h2><i class="fab fa-github"></i>  GITHUB</h2><a href="https://www.github.com/pilyeooong">www.github.com/pilyeooong</a>
+                        <br><br>
+                        <h2><i class="fas fa-paper-plane"></i>  EMAIL</h2><p>pilyeooong@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer id="footer">
             copyright
         </footer>
