--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
@@ -17,13 +17,17 @@
 <body>
     <div class="wrapper">
         <header id="header">
-        <div class="floating_menu">
+            <div class="floating_menu">
                 <ul>
                     <li><a onclick="gototop()"><i class="fas fa-arrow-alt-circle-up"></i></a></li>
                 </ul>
             </div>
             <div class="container">
                 <div class="header-top">
+                    <button class="header-menu-btn">
+                        <i class="fas fa-bars"></i>
+                        <span class="btn-label"></span>
+                    </button>
                     <div class="logo">
                         <h2>logoooOooo</h2>
                     </div>
@@ -33,7 +37,6 @@
                             <li><a onclick="fnMove('2')">SERVICES</a></li>
                             <li><a onclick="fnMove('3')">PORTFOLIO</a></li>
                             <li><a onclick="fnMove('4')">CONTACT</a></li>
-                            <li><a onclick="fnMove('5')">Menu5</a></li>          
                         </ul>
                     </nav>
                 </div>
@@ -99,7 +102,6 @@
                     </div>
                     <div class="content">
                         <div class="servicebox">
-
                             <div class="service">
                                 <a href="#"><i class="fas fa-camera-retro"></i></a>
                                 <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, architecto.</p>
@@ -148,55 +150,88 @@
                     <div class="content">
                         <div class="button-group filters-button-group">
                             <button data-filter="*" class="button is-checked">All</button>
-                            <button data-filter=".app-design" class="button">App Design</button>
-                            <button data-filter=".ul-design" class="button">UI Design</button>
-                            <button data-filter=".web-design" class="button">Web Design</button>
+                            <button data-filter=".PROGRAMMING" class="button">PROGRAMMING</button>
+                            <button data-filter=".WEB" class="button">WEB</button>
+                            <button data-filter=".FRONTEND" class="button">FRONTEND</button>
+                            <button data-filter=".BACKEND" class="button">BACKEND</button>
                         </div>
                         
                         <div class="grid">
-                            <div class="portfolio-item app-design" style="position: absolute; left: 0px; top: 0px;">
-                                <img src="static/imgs/portfolio1.jpg" alt="">
-                                <h3>THEME DESIGN</h3>
+                            <div class="portfolio-item PROGRAMMING" style="position: absolute; left: 0px; top: 0px;">
+                                <img src="static/imgs/python.png" alt="">
+                                <h4>PYTHON</h4>
                                 <div class="portfolio-text">
                                     <a href="static/imgs/portfolio1.jpg"></a>
                                 </div>
                             </div>
 
-                            <div class="portfolio-item ul-design" style="position: absolute; left: 300px; top: 0px;">
-                                <img src="static/imgs/portfolio2.jpg" alt="">
-                                <h3>THEME DESIGN</h3>
+                            <div class="portfolio-item PROGRAMMING" style="position: absolute; left: 300px; top: 0px;">
+                                <img src="static/imgs/cprogramming.png" alt="">
+                                <h4>C PROGRAMMING</h4>
                                 <div class="portfolio-text">
                                     <a href="static/imgs/portfolio2.jpg"></a>
                                 </div>
                             </div>
                             
-                            <div class= "portfolio-item web-design" style="position: absolute; left: 600px; top: 0px;">
-                                <img src="static/imgs/portfolio3.jpg" alt="" >
-                                <h3>THEME DESIGN</h3>
+                            <div class= "portfolio-item PROGRAMMING" style="position: absolute; left: 600px; top: 0px;">
+                                <img src="static/imgs/java.png" alt="" >
+                                <h4>JAVA</h4>
                                 <div class="portfolio-text">
                                     <a href="static/imgs/portfolio3.jpg"></a>
                                 </div>
                             </div>
 
-                            <div class= "portfolio-item app-design" style="position: absolute; left: 0px; top: 330px;">
-                                    <img src="static/imgs/portfolio4.jpg" alt="" >
-                                    <h3>THEME DESIGN</h3>
-                                    <div class="portfolio-text">
-                                        <a href="static/imgs/portfolio4.jpg"></a>
-                                    </div>
+                            <div class= "portfolio-item WEB" style="position: absolute; left: 0px; top: 330px;">
+                                <img src="static/imgs/HTML.png" alt="" >
+                                <h4>HTML</h4>
+                                <div class="portfolio-text">
+                                    <a href="static/imgs/portfolio4.jpg"></a>
+                                </div>
                             </div>
 
-                            <div class= "portfolio-item ul-design" style="position: absolute; left: 300px; top: 330px;">
-                                <img src="static/imgs/portfolio5.jpg" alt="" >
-                                <h3>THEME DESIGN</h3>
+                            <div class= "portfolio-item WEB" style="position: absolute; left: 300px; top: 330px;">
+                                <img src="static/imgs/css.png" alt="" >
+                                <h4>CSS</h4>
                                 <div class="portfolio-text">
                                     <a href="static/imgs/portfolio5.jpg"></a>
                                 </div>
                             </div>
 
-                            <div class= "portfolio-item web-design" style="position: absolute; left: 600px; top: 330px;">
-                                <img src="static/imgs/portfolio6.jpg" alt="" >
-                                <h3>THEME DESIGN</h3>
+                            <div class= "portfolio-item WEB" style="position: absolute; left: 600px; top: 330px;">
+                                <img src="static/imgs/javascript.png" alt="" >
+                                <h4>JAVASCRIPT</h4>
+                                <div class="portfolio-text">
+                                    <a href="static/imgs/portfolio6.jpg"></a>
+                                </div>
+                            </div>
+
+                            <div class= "portfolio-item FRONTEND" style="position: absolute; left: 600px; top: 330px;">
+                                <img src="static/imgs/vuejs.png" alt="" >
+                                <h4>VUE.JS</h4>
+                                <div class="portfolio-text">
+                                    <a href="static/imgs/portfolio6.jpg"></a>
+                                </div>
+                            </div>
+
+                            <div class= "portfolio-item FRONTEND" style="position: absolute; left: 600px; top: 330px;">
+                                <img src="static/imgs/reactjs.png" alt="" >
+                                <h4>REACT.JS</h4>
+                                <div class="portfolio-text">
+                                    <a href="static/imgs/portfolio6.jpg"></a>
+                                </div>
+                            </div>
+
+                            <div class= "portfolio-item BACKEND" style="position: absolute; left: 600px; top: 330px;">
+                                <img src="static/imgs/django.png" alt="" >
+                                <h4>DJANGO</h4>
+                                <div class="portfolio-text">
+                                    <a href="static/imgs/portfolio6.jpg"></a>
+                                </div>
+                            </div>
+
+                            <div class= "portfolio-item BACKEND" style="position: absolute; left: 600px; top: 330px;">
+                                <img src="static/imgs/node.png" alt="" >
+                                <h4>NODE.JS</h4>
                                 <div class="portfolio-text">
                                     <a href="static/imgs/portfolio6.jpg"></a>
                                 </div>
