grid layout hover 효과 추가

--- a/grid_layout/01.html
+++ b/grid_layout/01.html
@@ -17,85 +17,94 @@
                 <a href="#" class="header-logo"><img src="imgs/logo.png" alt=""></a>
                 <nav class="menu">
                     <ul>
-                        <li>MENU1</li>
-                        <li>MENU2</li>
-                        <li>MENU3</li>
-                        <li>MENU4</li>
+                        <li><a class="menu" href="#">MENU1</a></li>
+                        <li><a class="menu" href="#">MENU2</a></li>
+                        <li><a class="menu" href="#">MENU3</a></li>
+                        <li><a class="menu" href="#">MENU4</a></li>
                     </ul>
                 </nav>
             </header>
+            <section>
                 <ul class="row">
                     <li class="col">
                         <div class="item">
                             <img src="imgs/img01.jpg" alt="">
-                            <!-- <p>Lorem ipsum dolor sit amet.</p> -->
+                            <p>Lorem ipsum dolor sit amet.</p>
                         </div>
                     </li>
                     <li class="col">
                         <div class="item">
                             <img src="imgs/img02.jpg" alt="">
+                            <p>Lorem ipsum dolor sit amet.</p>
                             
                         </div>
                     </li>
                     <li class="col">
                         <div class="item">
                             <img src="imgs/portfolio2.jpg" alt="">
+                            <p>Lorem ipsum dolor sit amet.</p>
                         </div>
                     </li>
                     <li class="col">
                         <div class="item">
                             <img src="imgs/ocean2.jpeg" alt="">
+                            <p>Lorem ipsum dolor sit amet.</p>
                         </div>
                     </li>
                     <li class="col">
                         <div class="item">
                             <img src="imgs/portfolio1.jpg" alt="">
+                            <p>Lorem ipsum dolor sit amet.</p>
                         </div>
                     </li>
                     <li class="col">
                         <div class="item">
                             <img src="imgs/background.jpeg" alt="">
+                            <p>Lorem ipsum dolor sit amet.</p>
                         </div>
                     </li>
                     <li class="col">
                         <div class="item">
                             <img src="imgs/background2.jpeg" alt="">
+                            <p>Lorem ipsum dolor sit amet.</p>
                         </div>
                     </li>
                     <li class="col">
                         <div class="item">
                             <img src="imgs/background3.jpeg" alt="">
+                            <p>Lorem ipsum dolor sit amet.</p>
                         </div>
                     </li>
                 </ul>
-
-                <article class="content">
-                    <div class="intro-text">
-                        <h1>Lorem ipsum dolor sit amet.</h1>
-
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eius quis tempore nemo, illum molestias cupiditate accusantium id veritatis illo!</p>
-                    </div>
-                    <div class="test">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ad odit impedit unde nemo repudiandae, voluptatibus dicta laborum, ea delectus labore consectetur quas nulla quidem est laudantium neque totam commodi. Pariatur sed accusamus placeat esse et modi iure delectus tenetur accusantium sunt laudantium quibusdam ab deleniti odit, dicta inventore nobis.
-                    </div>
-                </article>
-                <section>
-                    <div class="content">
-                        <div class="left">
-                            <div class="item">
-                                <img src="imgs/ocean1.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="right">
-                            <div class="item"><img src="imgs/portfolio3.jpg" alt=""></div>
-                            <div class="item"><img src="imgs/portfolio4.jpg" alt=""></div>
-                            <div class="item"><img src="imgs/portfolio5.jpg" alt=""></div>
-                            <div class="item"><img src="imgs/portfolio6.jpg" alt=""></div>
+            </section>
+            <article class="content">
+                <div class="intro-text">
+                    <h1>Lorem ipsum dolor sit amet.</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eius quis tempore nemo, illum molestias cupiditate accusantium id veritatis illo!</p>
+                </div>
+                <div class="test">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ad odit impedit unde nemo repudiandae, voluptatibus dicta laborum, ea delectus labore consectetur quas nulla quidem est laudantium neque totam commodi. Pariatur sed accusamus placeat esse et modi iure delectus tenetur accusantium sunt laudantium quibusdam ab deleniti odit, dicta inventore nobis.
+                </div>
+            </article>
+            <section>
+                <div class="content">
+                    <div class="left">
+                        <div class="item">
+                            <img src="imgs/ocean1.jpg" alt="">
                         </div>
                     </div>
-                </section>
+                    <div class="right">
+                        <div class="item"><img src="imgs/portfolio3.jpg" alt=""></div>
+                        <div class="item"><img src="imgs/portfolio4.jpg" alt=""></div>
+                        <div class="item"><img src="imgs/portfolio5.jpg" alt=""></div>
+                        <div class="item"><img src="imgs/portfolio6.jpg" alt=""></div>
+                    </div>
+                </div>
+            </section>
             
         </div>
     </div>
+
+    <script src="01.js"></script>
 </body>
 </html>
